# S3Streamer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: Cargo.toml
backend/src/: main.rs
docs/docs/: configuration.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Breadcrumbs.tsx  FolderGrid.tsx  PaginationControls.tsx  VideoDialog.tsx  VideoGrid.tsx
frontend/src/hooks/: useBreadcrumbs.ts  useUrlState.ts  useVideoDialog.ts  useVideos.ts
frontend/src/types/: api.ts
src/controllers/: videoController.js
